--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <head>
     <title></title>
@@ -50,7 +50,7 @@
     <div class="show clear">
         <div class="col2-1">
             <div class="first-col2-1">
-                <p><a href="xinhua/www/index.html">迎春节</a></p>
+                <p><a href="xinhua/www/index.html">新华保险</a></p>
                 <p><a href="pc1/index.html">门户界面</a></p>
                 <p><a href="tongcheng/homePage.html">同城旅游</a></p>
                 <p><a href="phone/app/index.html">滴滴空间</a></p>
